refactor: update LeaderboardService to use Java Stream's toList() and improve variable naming